--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
+version: '3.8'
 services:
-  postgres:
-    image: postgres:16.8-alpine
+  db:
+    image: postgres:16.8
+    container_name: postgres_db
     environment:
       POSTGRES_DB: nodejs-template
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres_password
+      POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data:/var/lib/postgresql/data
 
   api:
     build: .
     environment:
       NODE_ENV: test
       PORT: 3000
-      DB_HOST: postgres
+      DB_HOST: db
       DB_PORT: 5432
       DB_NAME: nodejs-template
       DB_USERNAME: postgres
-      DB_PASSWORD: postgres_password
+      DB_PASSWORD: postgres
     ports:
       - "3000:3000"
     depends_on:
-      - postgres
+      - db
 
 volumes:
-  postgres_data: 
+  db_data: 
