--- a/package.json
+++ b/package.json
@@ -12,34 +12,41 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
-  "keywords": ["nodejs", "express", "typescript", "api", "rest"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "typescript",
+    "api",
+    "rest"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "helmet": "^8.1.0",
-    "morgan": "^1.10.0",
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "liquibase": "^4.28.1",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^24.0.14",
+    "@types/pg": "^8.10.9",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2",
-    "supertest": "^7.1.3",
-    "@types/supertest": "^6.0.3",
-    "@types/pg": "^8.10.9",
-    "@types/uuid": "^9.0.7"
+    "typescript": "^5.3.2"
   }
-} 
+}
