Exclude liquibase from sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,11 +7,11 @@ sonar.sourceEncoding=UTF-8
 
 sonar.sources=src
 sonar.tests=src/__tests__
-sonar.exclusions=**/*.d.ts,**/node_modules/**,**/dist/**,**/coverage/**
+sonar.exclusions=**/*.d.ts,**/node_modules/**,**/dist/**,**/coverage/**,**/LiquibaseService.ts
 
 sonar.test.inclusions=**/*.test.ts,**/*.spec.ts,**/__tests__/**/*.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,**/__tests__/**,**/index.ts,**/config/**
+sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,**/__tests__/**,**/index.ts,**/config/**,**/LiquibaseService.ts
 
 sonar.typescript.tsconfigPath=tsconfig.json 
