--- a/env.example
+++ b/env.example
@@ -6,5 +6,5 @@ NODE_ENV=test
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=nodejs-template
-DB_USER=postgres
+DB_USERNAME=postgres
 DB_PASSWORD=postgres_password
