--- a/.github/workflows/ci-cd-non-release.yml
+++ b/.github/workflows/ci-cd-non-release.yml
@@ -17,4 +17,5 @@ jobs:
     with:
       image-repo-name: "nodejs-template"
       app-name: "nodejs-template"
+      cloud-provider: "azure"
     secrets: inherit
